some improvement for preprocessing stages